# jpreprocess-vs-openjtalk

./: .gitignore  Cargo.toml  README.md  build.rs  filter.rb
.github/workflows/: deploy.yml
data/: bridges.txt  bridges.vvproj  cantari.txt  cantari.vvproj  chuni_01.txt  chuni_01.vvproj  chuni_02.txt  chuni_02.vvproj  dhmo_ansaikuropedia.txt  dnc_ansakuropedia.txt  extract_texts.rb  extreme_apologize_ansaikuropedia.txt  kokoro.txt  preprocess.rb  rohan.rb  rohan4600_transcript_utf8.txt  wagahaiwa_nekodearu.txt
frontend/: index.html  package.json  pnpm-lock.yaml  tsconfig.json
frontend/src/: App.vue  styles.css  types.ts
frontend/src/components/: EntryList.vue  EntryRow.vue  PhonemeDiff.vue  SummaryCard.vue
src/: main.rs
