[package]
name = "jpreprocess-vs-openjtalk"
version = "0.1.0"
edition = "2021"

[features]
panic_safe = []

[dependencies]
anyhow = "1.0.95"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
jlabel = "0.1.4"
jpreprocess = { features = [
  "naist-jdic",
], git = "https://github.com/jpreprocess/jpreprocess", branch = "jodoushi-doushi" }
lazy-regex = "3.4.1"
open_jtalk = { git = "https://github.com/voicevox/open_jtalk-rs" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
similar = "3.0.0"

[build-dependencies]
anyhow = "1.0.95"
flate2 = "1.0.35"
tar = "0.4.43"
ureq = "2.12.1"
