[package]
name = "jpreprocess-vs-openjtalk"
version = "0.1.0"
edition = "2021"

[features]
panic_safe = []

[dependencies]
anyhow = "1.0.103"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
jlabel = "0.1.10"
jpreprocess = { features = [
  "naist-jdic",
], git = "https://github.com/jpreprocess/jpreprocess", branch = "main" }
lazy-regex = "3.6.0"
open_jtalk = { git = "https://github.com/voicevox/open_jtalk-rs" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
similar = "3.1.1"

[build-dependencies]
anyhow = "1.0.103"
flate2 = "1.1.9"
tar = "0.4.46"
ureq = "3.3.0"
